--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Arsene Dev</title>
-</head>
-<body>
-    <h1>Hello</h1>
-</body>
+  </head>
+  <body>
+    <nav class="flexR container">
+      <h2 id="logo"><a href="index.html" class="link">My Logo</a></h2>
+      <img
+        src="/images/menu button.png"
+        width="18px"
+        height="12px"
+        id="menu"
+        alt="menu icon"
+      />
+      <ul>
+        <li><a href="about.html" class="link">Portfolio</a></li>
+        <li><a href="About.html" class="link">About</a></li>
+        <li><a href="contact.html" class="link">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="container" id="header"></div>
+  </body>
 </html>
