fix linters error

--- a/index.html
+++ b/index.html
@@ -23,6 +23,49 @@
         <li><a href="contact.html" class="link">Contact</a></li>
       </ul>
     </nav>
-    <div class="container" id="header"></div>
+    <div class="container flexC" id="header">
+      <section class="flexC">
+        <h1>I’m Arsene Thierry. Glad to see you!</h1>
+        <p>
+          I’m a software developer! I can help you build a product , feature or
+          website Look through some of my work and experience! If you like what
+          you see and have a project you need coded, don’t hesitate to contact
+          me.
+        </p>
+        <h3><a href="#" class="link">LET’S CONNECT</a></h3>
+        <div class="flexR">
+          <img
+            src="/images/twitter.png"
+            width="20px"
+            height="20px"
+            alt="gmail icon"
+          />
+          <img
+            src="/images/gmail.svg"
+            width="20px"
+            height="20px"
+            alt="gmail icon"
+          />
+          <img
+            src="/images/Linkedin icon.png"
+            width="20px"
+            height="20px"
+            alt="Linkedin icon"
+          />
+          <img
+            src="/images/Vector.svg"
+            width="20px"
+            height="20px"
+            alt="github icon"
+          />
+          <img
+            src="/images/Vector peace.svg"
+            width="20px"
+            height="20px"
+            alt="peace icon"
+          />
+        </div>
+      </section>
+    </div>
   </body>
 </html>
