--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <nav class="flexR container">
+    <nav class="flexr container">
       <h2 id="logo"><a href="index.html" class="link">My Logo</a></h2>
       <img
         src="/images/menu button.png"
@@ -24,8 +24,8 @@
         <li><a href="contact.html" class="link">Contact</a></li>
       </ul>
     </nav>
-    <div class="container flexC" id="header">
-      <section class="flexC">
+    <div class="container flexc" id="header">
+      <section class="flexc">
         <h1>I’m Arsene Thierry. Glad to see you!</h1>
         <p>
           I’m a software developer! I can help you build a product , feature or
@@ -34,7 +34,7 @@
           me.
         </p>
         <h3><a href="#" class="link">LET’S CONNECT</a></h3>
-        <div class="flexR">
+        <div class="flexr">
           <img
             src="/images/twitter.png"
             width="20px"
