recommended changes, media query mobile first, social icons in mobile and header tag usage

--- a/index.html
+++ b/index.html
@@ -10,56 +10,58 @@
 </head>
 
 <body>
-  <nav class="flexr container">
-    <a href="#" class="link">
-      <img src="https://arsenethierry-dev.vercel.app/images/logo-light.svg" width="90px" height="60px" alt="github icon" />
-    </a>
-    <img src="/images/menu button.png" width="18px" height="12px" id="menu" alt="menu icon" />
-    <ul>
-      <li><a href="about.html" class="link">Portfolio</a></li>
-      <li><a href="About.html" class="link">About</a></li>
-      <li><a href="contact.html" class="link">Contact</a></li>
-    </ul>
-  </nav>
+  <header>
+    <nav class="flexr container">
+      <a href="#" class="link">
+        <img src="https://arsenethierry-dev.vercel.app/images/logo-light.svg" width="90px" height="60px"
+          alt="github icon" />
+      </a>
+      <img src="/images/menu button.png" width="18px" height="12px" id="menu" alt="menu icon" />
+    </nav>
+  </header>
+
   <section class="container flexc" id="header">
-    <section class="flexc">
-      <h1>I’m Arsene Thierry. Glad to see you!</h1>
+    <div class="flexc mt">
+      <h1>I’m Arsene. 
+        <br />
+        Glad to see you!
+      </h1>
       <p>
         I’m a software developer! I can help you build a product , feature or
         website Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hesitate to contact
         me.
       </p>
+    </div>
+    <section class="flexc section2">
       <h3><a href="#" class="link">LET’S CONNECT</a></h3>
-      <div class="flexr">
-        <ul>
-          <li>
-            <a href="#" class="link">
-              <img src="/images/twitter.png" width="20px" height="20px" alt="gmail icon" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="link">
-              <img src="/images/gmail.svg" width="20px" height="20px" alt="gmail icon" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="link">
-              <img src="/images/Linkedin icon.png" width="20px" height="20px" alt="Linkedin icon" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="link">
-              <img src="/images/Vector.svg" width="20px" height="20px" alt="github icon" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="link">
-              <img src="/images/Vector peace.svg" width="20px" height="20px" alt="peace icon" />
-            </a>
-          </li>
-        </ul>
-      </div>
+      <ul class="flexr">
+        <li>
+          <a href="#" class="link">
+            <img src="/images/twitter.png" width="20px" height="20px" alt="gmail icon" />
+          </a>
+        </li>
+        <li>
+          <a href="#" class="link">
+            <img src="/images/gmail.svg" width="20px" height="20px" alt="gmail icon" />
+          </a>
+        </li>
+        <li>
+          <a href="#" class="link">
+            <img src="/images/Linkedin icon.png" width="20px" height="20px" alt="Linkedin icon" />
+          </a>
+        </li>
+        <li>
+          <a href="#" class="link">
+            <img src="/images/Vector.svg" width="20px" height="20px" alt="github icon" />
+          </a>
+        </li>
+        <li>
+          <a href="#" class="link">
+            <img src="/images/Vector peace.svg" width="20px" height="20px" alt="peace icon" />
+          </a>
+        </li>
+      </ul>
     </section>
   </section>
 </body>
