--- a/index.html
+++ b/index.html
@@ -5,65 +5,237 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/styles.css" />
-  <title>My Portifolio</title>
+  <title>Arsene Portfolio</title>
+  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconn4gt1ect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet" />
 </head>
 
 <body>
   <header>
-    <nav class="flexr container">
-      <a href="#" class="link">
-        <img src="https://arsenethierry-dev.vercel.app/images/logo-light.svg" width="90px" height="60px"
-          alt="github icon" />
-      </a>
-      <img src="/images/menu button.png" width="18px" height="12px" id="menu" alt="menu icon" />
+    <nav class="navbar">
+      <div class="navbar-content">
+        <a href="#" class="logo">My Logo</a>
+        <img src="images/button.png" />
+      </div>
+      <div class="nav_link hide">
+        <ul>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
-
-  <section class="container flexc" id="header">
-    <div class="flexc mt">
-      <h1>I’m Arsene. 
-        <br />
-        Glad to see you!
-      </h1>
-      <p>
+  <section class="section-1">
+    <div class="section-1-container">
+      <h1 class="heading">I’m Arsene<br />Glad to see you!</h1>
+      <p class="leading">
         I’m a software developer! I can help you build a product , feature or
         website Look through some of my work and experience! If you like what
-        you see and have a project you need coded, don’t hesitate to contact
+        you see and have a project you need coded, don’t hestiate to contact
         me.
       </p>
-    </div>
-    <section class="flexc section2">
-      <h3><a href="#" class="link">LET’S CONNECT</a></h3>
-      <ul class="flexr">
+      <p class="social-heading">LET’S CONNECT</p>
+      <ul class="socials">
         <li>
-          <a href="#" class="link">
-            <img src="/images/twitter.png" width="20px" height="20px" alt="gmail icon" />
-          </a>
+          <a href="https://twitter.com/KomezudufasheT"><img src="images/Vector.svg" /> </a>
         </li>
         <li>
-          <a href="#" class="link">
-            <img src="/images/gmail.svg" width="20px" height="20px" alt="gmail icon" />
-          </a>
+          <a href="https://www.linkedin.com/in/arsenethierry/"><img src="images/Linkedin icon.svg" /></a>
         </li>
         <li>
-          <a href="#" class="link">
-            <img src="/images/Linkedin icon.png" width="20px" height="20px" alt="Linkedin icon" />
-          </a>
+          <a href="mailto:komezarsene15@gmail.com"><img src="images/Vector (2).svg" /></a>
         </li>
         <li>
-          <a href="#" class="link">
-            <img src="/images/Vector.svg" width="20px" height="20px" alt="github icon" />
-          </a>
+          <a href="https://github.com/Arsenethierry"><img src="images/Vector (3).svg" /></a>
         </li>
         <li>
-          <a href="#" class="link">
-            <img src="/images/Vector peace.svg" width="20px" height="20px" alt="peace icon" />
-          </a>
+          <a href="#"><img src="images/Vector (4).svg" /></a>
         </li>
       </ul>
-    </section>
+    </div>
   </section>
+  <section class="section-2">
+    <div class="container-1">
+      <img src="images/Snapshoot Portfolio.png" />
+      <div class="items">
+        <h1>Tonic</h1>
+        <ul>
+          <li>CANOPY</li>
+          <li>Back End Dev</li>
+          <li>2015</li>
+        </ul>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required.
+        </p>
+        <ul class="btn-div">
+          <li><a href="" class="btn">HTML</a></li>
+          <li><a href="" class="btn">CSS</a></li>
+          <li><a href="" class="btn">javascript</a></li>
+        </ul>
+        <button class="last-btn">See Project</button>
+      </div>
+    </div>
+    <div class="container-1">
+      <img src="images/Snapshoot Portfolio (1).png" />
+      <div class="items">
+        <h1>Multi-Post Stories</h1>
+        <ul>
+          <li>CANOPY</li>
+          <li>Back End Dev</li>
+          <li>2015</li>
+        </ul>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required.
+        </p>
+        <ul class="btn-div">
+          <li><a href="" class="btn">HTML</a></li>
+          <li><a href="" class="btn">CSS</a></li>
+          <li><a href="" class="btn">javascript</a></li>
+        </ul>
+        <button class="last-btn">See Project</button>
+      </div>
+    </div>
+    <div class="container-1">
+      <img src="images/Snapshoot Portfolio (2).png" />
+      <div class="items">
+        <h1>Tonic</h1>
+        <ul class="lists">
+          <li>CANOPY</li>
+          <li>Back End Dev</li>
+          <li>2015</li>
+        </ul>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required.
+        </p>
+        <ul class="btn-div">
+          <li><a href="" class="btn">HTML</a></li>
+          <li><a href="" class="btn">CSS</a></li>
+          <li><a href="" class="btn">javascript</a></li>
+        </ul>
+        <button class="last-btn">See Project</button>
+      </div>
+    </div>
+    <div class="container-1">
+      <img src="images/Snapshoot Portfolio (3).png" />
+      <div class="items">
+        <h1>Multi-Post Stories</h1>
+        <ul>
+          <li>CANOPY</li>
+          <li>Back End Dev</li>
+          <li>2015</li>
+        </ul>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required.
+        </p>
+        <ul class="btn-div">
+          <li><a href="" class="btn">HTML</a></li>
+          <li><a href="" class="btn">CSS</a></li>
+          <li><a href="" class="btn">javascript</a></li>
+        </ul>
+        <button class="last-btn">See Project</button>
+      </div>
+    </div>
+  </section>
+  <section class="section-2-desktop">
+    <div class="container-1">
+      <img src="images/Snapshoot Portfolio@2x.png" />
+      <div class="items">
+        <h1>Tonic</h1>
+        <ul>
+          <li>CANOPY</li>
+          <li>Back End Dev</li>
+          <li>2015</li>
+        </ul>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required.
+        </p>
+        <ul class="btn-div">
+          <li><a href="" class="btn">HTML</a></li>
+          <li><a href="" class="btn">CSS</a></li>
+          <li><a href="" class="btn">javascript</a></li>
+        </ul>
+        <button class="last-btn">See Project</button>
+      </div>
+    </div>
+    <div class="container-1">
+      <div class="items">
+        <h1>Multi-Post Stories</h1>
+        <ul>
+          <li>FACEBOOK</li>
+          <li>Full Stack Dev</li>
+          <li>2015</li>
+        </ul>
+        <p>
+          Experimental content creation feature that allows users to add to an existing story over the course of a day
+          without spamming their friends.
+        </p>
+        <ul class="btn-div">
+          <li><a href="" class="btn">HTML</a></li>
+          <li><a href="" class="btn">CSS</a></li>
+          <li><a href="" class="btn ruby">Ruby on rails</a></li>
+          <li><a href="" class="btn">javascript</a></li>
+        </ul>
+        <button class="last-btn">See Project</button>
+      </div>
+      <img src="images/Snapshoot Portfolio (3).png" />
+    </div>
+    <div class="container-1">
+      <img src="images/Snapshoot Portfolio.png" />
+      <div class="items">
+        <h1>Facebook 360</h1>
+        <ul>
+          <li>FACEBOOK</li>
+          <li>Full Stack Dev</li>
+          <li>2015</li>
+        </ul>
+        <p>
+          Experimental content creation feature that allows users to add to an existing story over the course of a day
+          without spamming their friends.
+        </p>
+        <ul class="btn-div">
+          <li><a href="" class="btn">HTML</a></li>
+          <li><a href="" class="btn">CSS</a></li>
+          <li><a href="" class="btn ruby">Ruby on rails</a></li>
+          <li><a href="" class="btn">javascript</a></li>
+        </ul>
+        <button class="last-btn">See Project</button>
+      </div>
+    </div>
+    <div class="container-1">
+      <div class="items">
+        <h1>Uber Navigation</h1>
+        <ul>
+          <li>UBER</li>
+          <li>Lead Deveveloper</li>
+          <li>2018</li>
+        </ul>
+        <p>
+          A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer:
+          your car.
+        </p>
+        <ul class="btn-div">
+          <li><a href="" class="btn">HTML</a></li>
+          <li><a href="" class="btn">CSS</a></li>
+          <li><a href="" class="btn ruby">Ruby on rails</a></li>
+          <li><a href="" class="btn">javascript</a></li>
+        </ul>
+        <button class="last-btn">See Project</button>
+      </div>
+      <img src="images/Snapshoot Portfolio (1).png" />
+    </div>
+  </section>
+  
 </body>
 
 </html>
