Add about section

--- a/index.html
+++ b/index.html
@@ -235,7 +235,38 @@
       <img src="images/Snapshoot Portfolio (1).png" />
     </div>
   </section>
-  
+  <section class="section-3">
+    <div class="container-3">
+      <div class="about-div">
+        <h1 class="about">About Myself</h1>
+        <p>
+          Hello I’m a software developer! I can help you build a product ,
+          feature or website Look through some of my work and experience! If
+          you like what you see and have a project you need coded, don’t
+          hestiate to contact me.
+        </p>
+        <p class="social-heading">LET’S CONNECT</p>
+        <ul class="socials">
+          <li>
+            <a href="https://twitter.com/KomezudufasheT"><img src="images/Vector.svg" /> </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/arsenethierry/"><img src="images/Linkedin icon.svg" /></a>
+          </li>
+          <li>
+            <a href="mailto:komezarsene15@gmail.com"><img src="images/Vector (2).svg" /></a>
+          </li>
+          <li>
+            <a href="https://github.com/Arsenethierry"><img src="images/Vector (3).svg" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="images/Vector (4).svg" /></a>
+          </li>
+        </ul>
+        <button class="last-btn m-b">Get My Resume</button>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
