Add my contact section

--- a/index.html
+++ b/index.html
@@ -265,6 +265,34 @@
         </ul>
         <button class="last-btn m-b">Get My Resume</button>
       </div>
+      <div class="languages">
+        <ul class="languages-div language">
+          <li>Languages</li>
+          <li><img src="images/Union.png" /></li>
+        </ul>
+        <div class="wrapper">
+          <div class="languages-div skills">
+            <img src="images/Ellipse 1.png" />
+            <h5 class="m-l">javascript</h5>
+          </div>
+          <div class="languages-div skills">
+            <img src="images/Ellipse 1 (1).png" />
+            <h5 class="m-l">CSS</h5>
+          </div>
+          <div class="languages-div skills">
+            <img src="images/Ellipse 1 (2).png" />
+            <h5 class="m-l">HTML</h5>
+          </div>
+        </div>
+        <ul class="languages-div framework">
+          <li>Framework</li>
+          <li><img src="images/union 2.png" /></li>
+        </ul>
+        <ul class="languages-div framework">
+          <li>Skills</h3>
+          <li><img src="images/union 2.png" /></li>
+        </ul>
+      </div>
     </div>
   </section>
 </body>
