--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <li><a href="" class="btn">CSS</a></li>
           <li><a href="" class="btn">javascript</a></li>
         </ul>
-        <button class="last-btn">See Project</button>
+        <button class="last-btn" type="button">See Project</button>
       </div>
     </div>
     <div class="container-1">
@@ -100,7 +100,7 @@
           <li><a href="" class="btn">CSS</a></li>
           <li><a href="" class="btn">javascript</a></li>
         </ul>
-        <button class="last-btn">See Project</button>
+        <button class="last-btn" type="button">See Project</button>
       </div>
     </div>
     <div class="container-1">
@@ -121,7 +121,7 @@
           <li><a href="" class="btn">CSS</a></li>
           <li><a href="" class="btn">javascript</a></li>
         </ul>
-        <button class="last-btn">See Project</button>
+        <button class="last-btn" type="button">See Project</button>
       </div>
     </div>
     <div class="container-1">
@@ -142,7 +142,7 @@
           <li><a href="" class="btn">CSS</a></li>
           <li><a href="" class="btn">javascript</a></li>
         </ul>
-        <button class="last-btn">See Project</button>
+        <button class="last-btn" type="button">See Project</button>
       </div>
     </div>
   </section>
@@ -165,7 +165,7 @@
           <li><a href="" class="btn">CSS</a></li>
           <li><a href="" class="btn">javascript</a></li>
         </ul>
-        <button class="last-btn">See Project</button>
+        <button class="last-btn" type="button">See Project</button>
       </div>
     </div>
     <div class="container-1">
@@ -186,7 +186,7 @@
           <li><a href="" class="btn ruby">Ruby on rails</a></li>
           <li><a href="" class="btn">javascript</a></li>
         </ul>
-        <button class="last-btn">See Project</button>
+        <button class="last-btn" type="button">See Project</button>
       </div>
       <img src="images/Snapshoot Portfolio (3).png" />
     </div>
@@ -209,7 +209,7 @@
           <li><a href="" class="btn ruby">Ruby on rails</a></li>
           <li><a href="" class="btn">javascript</a></li>
         </ul>
-        <button class="last-btn">See Project</button>
+        <button class="last-btn" type="button">See Project</button>
       </div>
     </div>
     <div class="container-1">
@@ -230,7 +230,7 @@
           <li><a href="" class="btn ruby">Ruby on rails</a></li>
           <li><a href="" class="btn">javascript</a></li>
         </ul>
-        <button class="last-btn">See Project</button>
+        <button class="last-btn" type="button">See Project</button>
       </div>
       <img src="images/Snapshoot Portfolio (1).png" />
     </div>
@@ -263,7 +263,7 @@
             <a href="#"><img src="images/Vector (4).svg" /></a>
           </li>
         </ul>
-        <button class="last-btn m-b">Get My Resume</button>
+        <button class="last-btn m-b" type="button">Get My Resume</button>
       </div>
       <div class="languages">
         <ul class="languages-div language">
