changes made according to review, font size, font colors, MIT licence, flex box and button interactions

--- a/index.html
+++ b/index.html
@@ -270,20 +270,20 @@
           <li>Languages</li>
           <li><img src="images/Union.png" /></li>
         </ul>
-        <div class="wrapper">
-          <div class="languages-div skills">
+        <ul class="wrapper">
+          <li class="languages-div skills">
             <img src="images/Ellipse 1.png" />
             <h5 class="m-l">javascript</h5>
-          </div>
-          <div class="languages-div skills">
+          </li>
+          <li class="languages-div skills">
             <img src="images/Ellipse 1 (1).png" />
             <h5 class="m-l">CSS</h5>
-          </div>
-          <div class="languages-div skills">
+          </li>
+          <li class="languages-div skills">
             <img src="images/Ellipse 1 (2).png" />
             <h5 class="m-l">HTML</h5>
-          </div>
-        </div>
+          </li>
+        </ul>
         <ul class="languages-div framework">
           <li>Framework</li>
           <li><img src="images/union 2.png" /></li>
