--- a/index.html
+++ b/index.html
@@ -295,6 +295,22 @@
       </div>
     </div>
   </section>
+  <footer>
+    <div class="footcontainer">
+      <h3>Contact me</h3>
+      <p>If you have an application you are interested in developing, a feature that you need built or a project that
+        needs
+        coding.
+        I’d love to help with it!</p>
+    </div>
+    <form action="">
+      <input type="text" placeholder="Lorem Ipsum" maxlength="30" required>
+      <input type="email" name="" id="" placeholder="loremipsum@gmail.com" required>
+      <textarea name="textarea" id="" cols=" 30" rows="10" maxlength="500"
+        required>Write your message here...</textarea>
+      <button class="buttonlast">Get in touch</button>
+    </form>
+  </footer>
 </body>
 
 </html>
