--- a/index.html
+++ b/index.html
@@ -296,19 +296,21 @@
     </div>
   </section>
   <footer>
-    <div class="footcontainer">
+    <div class="footercontainer">
       <h3>Contact me</h3>
       <p>If you have an application you are interested in developing, a feature that you need built or a project that
         needs
         coding.
         I’d love to help with it!</p>
     </div>
-    <form action="">
-      <input type="text" placeholder="Lorem Ipsum" maxlength="30" required>
-      <input type="email" name="" id="" placeholder="loremipsum@gmail.com" required>
-      <textarea name="textarea" id="" cols=" 30" rows="10" maxlength="500"
-        required>Write your message here...</textarea>
-      <button class="buttonlast">Get in touch</button>
+    <form action="" class="form">
+      <ul>
+        <li><input type="text" placeholder="Lorem Ipsum" maxlength="30" required></li>
+        <li><input type="email" name="" id="" placeholder="loremipsum@gmail.com" required></li>
+        <li><textarea name="textarea" id="" cols=" 30" rows="10" maxlength="500"
+          required>Write your message here...</textarea></li>
+        <li><button class="footer-btn">Get in touch</button></li>
+        </ul>
     </form>
   </footer>
 </body>
