Add formspree and changes in styles.css

--- a/index.html
+++ b/index.html
@@ -303,13 +303,13 @@
         coding.
         I’d love to help with it!</p>
     </div>
-    <form action="" class="form">
+    <form action="https://formspree.io/f/xlekzlrv" method="POST" class="form">
       <ul>
-        <li><input type="text" placeholder="Lorem Ipsum" maxlength="30" required></li>
-        <li><input type="email" name="" id="" placeholder="loremipsum@gmail.com" required></li>
+        <li><input type="text" name="name" placeholder="Lorem Ipsum" maxlength="30" required></li>
+        <li><input type="email" name="email" id="" placeholder="loremipsum@gmail.com" required></li>
         <li><textarea name="textarea" id="" cols=" 30" rows="10" maxlength="500"
           required>Write your message here...</textarea></li>
-        <li><button class="footer-btn">Get in touch</button></li>
+        <li><button type="submit" class="footer-btn">Get in touch</button></li>
         </ul>
     </form>
   </footer>
