--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
   </section>
   <section class="section-2-desktop">
     <div class="container-1">
-      <img src="images/Snapshoot Portfolio@2x.png" />
+      <div>
+        <img src="images/Snapshoot Portfolio@2x.png" />
+      </div>
       <div class="items">
         <h1>Tonic</h1>
         <ul>
@@ -183,7 +185,7 @@
         <ul class="btn-div">
           <li><a href="" class="btn">HTML</a></li>
           <li><a href="" class="btn">CSS</a></li>
-          <li><a href="" class="btn ruby">Ruby on rails</a></li>
+          <li><a href="" class="btn">Ruby on rails</a></li>
           <li><a href="" class="btn">javascript</a></li>
         </ul>
         <button class="last-btn" type="button">See Project</button>
@@ -191,7 +193,9 @@
       <img src="images/Snapshoot Portfolio (3).png" />
     </div>
     <div class="container-1">
-      <img src="images/Snapshoot Portfolio.png" />
+      <div>
+        <img src="images/Snapshoot Portfolio.png" />
+      </div>
       <div class="items">
         <h1>Facebook 360</h1>
         <ul>
@@ -206,7 +210,7 @@
         <ul class="btn-div">
           <li><a href="" class="btn">HTML</a></li>
           <li><a href="" class="btn">CSS</a></li>
-          <li><a href="" class="btn ruby">Ruby on rails</a></li>
+          <li><a href="" class="btn">Ruby on rails</a></li>
           <li><a href="" class="btn">javascript</a></li>
         </ul>
         <button class="last-btn" type="button">See Project</button>
@@ -227,7 +231,7 @@
         <ul class="btn-div">
           <li><a href="" class="btn">HTML</a></li>
           <li><a href="" class="btn">CSS</a></li>
-          <li><a href="" class="btn ruby">Ruby on rails</a></li>
+          <li><a href="" class="btn">Ruby on rails</a></li>
           <li><a href="" class="btn">javascript</a></li>
         </ul>
         <button class="last-btn" type="button">See Project</button>
@@ -308,9 +312,9 @@
         <li><input type="text" name="name" placeholder="Lorem Ipsum" maxlength="30" required></li>
         <li><input type="email" name="email" id="" placeholder="loremipsum@gmail.com" required></li>
         <li><textarea name="textarea" id="" cols=" 30" rows="10" maxlength="500"
-          required>Write your message here...</textarea></li>
+            required>Write your message here...</textarea></li>
         <li><button type="submit" class="footer-btn">Get in touch</button></li>
-        </ul>
+      </ul>
     </form>
   </footer>
 </body>
