Add changes in styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <a href="#"><img src="images/Vector (4).svg" /></a>
           </li>
         </ul>
-        <button class="last-btn m-b" type="button">Get My Resume</button>
+        <button class="last-btn" type="button">Get My Resume</button>
       </div>
       <div class="languages">
         <ul class="languages-div language">
@@ -277,15 +277,15 @@
         <ul class="wrapper">
           <li class="languages-div skills">
             <img src="images/Ellipse 1.png" />
-            <h5 class="m-l">javascript</h5>
+            <h5>javascript</h5>
           </li>
           <li class="languages-div skills">
             <img src="images/Ellipse 1 (1).png" />
-            <h5 class="m-l">CSS</h5>
+            <h5>CSS</h5>
           </li>
           <li class="languages-div skills">
             <img src="images/Ellipse 1 (2).png" />
-            <h5 class="m-l">HTML</h5>
+            <h5>HTML</h5>
           </li>
         </ul>
         <ul class="languages-div framework">
