Add rotation animation to the portfolio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar">
       <div class="navbar-content">
-        <a href="#" class="logo">My Logo</a>
+        <a href="#" class="logo rotated">My Logo</a>
         <img src="images/button.png" />
       </div>
       <div class="nav_link hide">
